# remedi

./: .gitignore  README.md  SCALE_IDEAS.md  concepts.md  main.py  pyproject.toml  render.yaml  requirements.txt  server.py  start.sh  worker.py
aegis-dashboard/: middleware.ts  package-lock.json  package.json  proxy.ts
aegis-dashboard/app/: globals.css  layout.tsx  page.tsx
aegis-dashboard/app/about/: page.tsx
aegis-dashboard/app/dashboard/: page.tsx
aegis-dashboard/app/developer/: page.tsx
aegis-dashboard/app/onboarding/: page.tsx
aegis-dashboard/app/setup-details/: page.tsx
aegis-dashboard/app/sign-in/[[...sign-in]]/: page.tsx
aegis-dashboard/app/sign-up/[[...sign-up]]/: page.tsx
agents/: graph.py  mcp_client.py  nodes.py  state.py
cloudformation/: remedi-agent.yaml
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/developer/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/protected-users/: page.tsx
mcp_server/: database.py  main.py
remedi_platform/: accounts.py  auth.py  compliance.py
terraform/: test_env.tf
tests/: conftest.py  test_accounts.py  test_mcp_tools.py  test_remediator.py
